Add a warning message when changing profile of a multilayered image

When changing color profile of the image blending modes start to
behave differently. The biggest visual drift is caused by
the difference in tone response curves, though just changing
primaries will also affect blending modes like "Overlay".

BUG:356303