plugins/extensions/colorspaceconversion/dlg_colorspaceconversion.cc
@@ -36,6 +36,9 @@
 #include "widgets/kis_cmb_idlist.h"
 #include <KisSqueezedComboBox.h>// TODO: add a label that would display if there isn't a good color conversion path (use KoColorConversionSystem::isGoodPath), all color spaces shipped with Calligra are expected to have a good path, but better warn the user in case
 
+#include "kis_image.h"
+#include "kis_layer_utils.h"
+
 DlgColorSpaceConversion::DlgColorSpaceConversion(QWidget *  parent,
         const char * name)
         : KoDialog(parent)
@@ -60,6 +63,7 @@ DlgColorSpaceConversion::DlgColorSpaceConversion(QWidget *  parent,
 
 
     connect(m_page->colorSpaceSelector, SIGNAL(selectionChanged(bool)), this, SLOT(selectionChanged(bool)));
+    connect(m_page->colorSpaceSelector, SIGNAL(colorSpaceChanged(const KoColorSpace*)), this, SLOT(slotColorSpaceChanged(const KoColorSpace*)));
 
 }
 
@@ -70,7 +74,7 @@ DlgColorSpaceConversion::~DlgColorSpaceConversion()
     delete m_page;
 }
 
-void DlgColorSpaceConversion::setInitialColorSpace(const KoColorSpace *cs)
+void DlgColorSpaceConversion::setInitialColorSpace(const KoColorSpace *cs, KisImageSP entireImage)
 {
     if (!cs) {
         return;
@@ -83,6 +87,8 @@ void DlgColorSpaceConversion::setInitialColorSpace(const KoColorSpace *cs)
         m_page->chkAllowLCMSOptimization->setCheckState(Qt::Checked);
     }
     m_page->colorSpaceSelector->setCurrentColorSpace(cs);
+
+    m_image = entireImage;
 }
 
 void DlgColorSpaceConversion::selectionChanged(bool valid)
@@ -97,5 +103,19 @@ void DlgColorSpaceConversion::selectionChanged(bool valid)
 void DlgColorSpaceConversion::okClicked()
 {
     accept();
+}
+
+void DlgColorSpaceConversion::slotColorSpaceChanged(const KoColorSpace *cs)
+{
+    if (m_image &&
+        *m_image->profile() != *cs->profile() &&
+        !KisLayerUtils::canChangeImageProfileInvisibly(m_image)) {
+
+        m_page->wdgWarningNotice->setVisible(true);
+        m_page->wdgWarningNotice->setText(
+                    m_page->wdgWarningNotice->changeImageProfileWarningText());
+    } else {
+        m_page->wdgWarningNotice->setVisible(false);
+    }
 }
 
